# simple-gallery

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  README.md  TODO.md
.cargo/: config.toml
files/: index.html.j2
src/: lib.rs  main.rs
