[package]
name = "simple-gallery"
version = "0.0.2"
edition = "2021"
readme = "README.md"
authors = ["Conor Schaefer <conor@ruin.dev>"]
publish = true
license = "AGPL-3.0-only"
description = "Generates a single-page static web application, with no JS, serving a simple photogallery"
repository = "https://github.com/conorsch/simple-gallery"
include = ["src/**/*", "README.md", "files/index.html.j2"]
categories = ["command-line-utilities", "web-programming"]
keywords = ["web", "photos", "gallery", "cli"]

[dependencies]
axum = "0.7"
serde = { version = "1.0.137", features = ["derive"] }
tera = "1.16.0"
walkdir = "2.3.2"
tokio = { version = "1", features = ["full"] }
axum-extra = { version = "0.3.5", features = ["spa"] }
clap = { version = "~3", features = ["env", "cargo", "derive"] }
env_logger = "~0.9"
log = "0.4.17"
rand = "0.8.5"
tower-http = { version = "0.5.1", features = ["fs"] }
mime = "0.3.17"
tower-service = "0.3.2"
http = "1.0.0"
tower = "0.4.13"
